--- a/index.html
+++ b/index.html
@@ -1,17 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <title>6BM Band Official Website</title>
-    <link rel="stylesheet" type="text/css" href="./style.css" />
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700" rel="stylesheet">
+    <script src="./script.js" defer></script>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="./style.css" />
 </head>
+
 <body>
     <header class="page-header">
         <h1 class="page-brand">
             <img src="./images/logo.png" alt="6BM logo" />
         </h1>
-        <nav class="page-navigation">
+        <button class="button button-navigation">
+            <img class="hamburger-menu" src="./images/hamburger-menu.png" alt="Menu" />
+        </button>
+        <nav class="page-navigation__items invisible">
             <ul class="page-navigation__items">
                 <li class="page-navigation__item">
                     <a class="page-navigation__link" href="#home">Home</a>
@@ -34,46 +40,54 @@
             </ul>
         </nav>
     </header>
-
     <main class="page-content">
         <section id="home" class="content-section home-section">
+            <!--
+                    ZAGADNIENIE PONADPROGRAMOWE
+                    Nagłówek 'Home' nie jest pokazany na projekcie graficznym, ale dobrą praktyką
+                    jest umieszczanie nagłówków przy każdej głównej sekcji strony.
+                    Pozwoli to na użytkownikom czytników ekranowych (np. osobom niewidomym lub niedowidzącym)
+                    na zorientowanie się w strukturze naszej strony.
+                    A żeby zachować wygląd strony adekwatny do projektu graficznego,
+                    można utworzyć pomocniczą klasę CSS (np. 'screen-reader-only'),
+                    która będzie ukrywała dany element dla standardowego użytkownika.
+                    Należy jednak pamiętać, że ukrywanie elementów strony może obniżyć ranking
+                    pozycjonowania twojej strony (SEO) i powinniśmy starać się umieszczać elementy nagłówkowe
+                    w projekcie graficznym.
+                    Dlatego też trzeba świadomie stosować to rozwiązanie i jeśli bardziej zależy nam na
+                    pozycjonowaniu niż dostępności, wtedy możemy użyć więcej niż jeden znacznik <h1> i
+                    używać go jako głównego nagłówka danych sekcji (w przypadku naszego projektu <h2>
+                    zamienilibyśmy na <h1>, a <h3> na <h2>).
+                -->
             <h2 class="content-section__header screen-reader-only">Home</h2>
             <ul class="band-members">
                 <li class="band-members__item">
                     <img class="band-members__image" src="./images/band-member01.png"
                         alt="Image of stylized keyboard player's face" />
-                    <div class="band-members__info">
-                        <p class="band-members__name">Kamil Zgondek</p>
-                        <p class="band-members__desc">Keyboard</p>
-                    </div>
+                    <p class="band-members__name">Kamil Zgondek</p>
+                    <p class="band-members__desc">Keyboard</p>
                 </li>
                 <li class="band-members__item">
                     <img class="band-members__image" src="./images/band-member02.png"
                         alt="Image of stylized vocalist's face" />
-                    <div class="band-members__info">
-                        <p class="band-members__name">Łukasz Furman</p>
-                        <p class="band-members__desc">Vocals</p>
-                    </div>
+                    <p class="band-members__name">Łukasz Furman</p>
+                    <p class="band-members__desc">Vocals</p>
                 </li>
                 <li class="band-members__item">
                     <img class="band-members__image" src="./images/band-member03.png"
                         alt="Image of stylized drummer's face" />
-                    <div class="band-members__info">
-                        <p class="band-members__name">Kamil Majewski</p>
-                        <p class="band-members__desc">Drums</p>
-                    </div>
+                    <p class="band-members__name">Kamil Majewski</p>
+                    <p class="band-members__desc">Drums</p>
                 </li>
                 <li class="band-members__item">
                     <img class="band-members__image" src="./images/band-member04.png"
                         alt="Image of stylized bassist's face" />
-                    <div class="band-members__info">
-                        <p class="band-members__name">Daniel Cajzer</p>
-                        <p class="band-members__desc">Bass guitar</p>
-                    </div>
+                    <p class="band-members__name">Daniel Cajzer</p>
+                    <p class="band-members__desc">Bass guitar</p>
                 </li>
             </ul>
-        </section>
 
+        </section>
         <section id="about" class="content-section">
             <h2 class="content-section__header">About</h2>
             <div class="about">
@@ -93,7 +107,6 @@
                 </div>
             </div>
         </section>
-
         <section id="concerts" class="content-section">
             <h2 class="content-section__header">Concerts</h2>
             <div class="concerts">
@@ -105,7 +118,9 @@
                             <p class="concerts__date">20.12.2018</p>
                             <p class="concerts__location">Lublin, klub XXX</p>
                         </div>
-                        <button class="button">Buy a ticket</button>
+                        <div id="container_1">
+                            <button id="button_1" class="button button-concert">Buy a ticket</button>  
+                        </div>
                     </header>
                 </article>
                 <article class="concerts__item">
@@ -116,7 +131,9 @@
                             <p class="concerts__date">20.12.2018</p>
                             <p class="concerts__location">Lublin, klub XXX</p>
                         </div>
-                        <button class="button">Buy a ticket</button>
+                        <div id="container_2">
+                            <button id="button_2" class="button button-concert">Buy a ticket</button>  
+                        </div>
                     </header>
                 </article>
                 <article class="concerts__item">
@@ -127,7 +144,9 @@
                             <p class="concerts__date">20.12.2018</p>
                             <p class="concerts__location">Lublin, klub XXX</p>
                         </div>
-                        <button class="button">Buy a ticket</button>
+                        <div id="container_3">
+                            <button id="button_3" class="button button-concert">Buy a ticket</button>  
+                        </div>
                     </header>
                 </article>
                 <article class="concerts__item">
@@ -138,97 +157,96 @@
                             <p class="concerts__date">20.12.2018</p>
                             <p class="concerts__location">Lublin, klub XXX</p>
                         </div>
-                        <button class="button">Buy a ticket</button>
+                        <div id="container_4">
+                            <button id="button_4" class="button button-concert">Buy a ticket</button>  
+                        </div>
                     </header>
                 </article>
             </div>
         </section>
-
         <section id="video" class="content-section">
             <h2 class="content-section__header">Video</h2>
             <iframe class="embedded-video" width="853" height="480"
                 src="https://www.youtube.com/embed/AstRXh-vKNI?rel=0" frameborder="0" allow="autoplay; encrypted-media"
                 allowfullscreen></iframe>
         </section>
-        
         <section id="photos" class="content-section">
             <h2 class="content-section__header">Photos</h2>
             <ul class="gallery">
                 <li class="gallery__item">
-                    <img class="gallery__image" 
+                    <img class="gallery__image"
                         srcset="./images/band05_JakubBodys.jpg,
-                        ./images/band05_JakubBodys@2.jpg 2x,
-                        ./images/band05_JakubBodys@3.jpg 3x"
+                                ./images/band05_JakubBodys@2.jpg 2x,
+                                ./images/band05_JakubBodys@3.jpg 3x"
                         src="./images/band05_JakubBodys@3.jpg"
                         alt="Image of band vocalist during a concert" />
                 </li>
                 <li class="gallery__item">
-                    <img class="gallery__image" 
+                    <img class="gallery__image"
                         srcset="./images/band06_JakubBodys.jpg,
-                        ./images/band06_JakubBodys@2.jpg 2x,
-                        ./images/band06_JakubBodys@3.jpg 3x"
+                                ./images/band06_JakubBodys@2.jpg 2x,
+                                ./images/band06_JakubBodys@3.jpg 3x"
                         src="./images/band06_JakubBodys@3.jpg"
                         alt="Image of band drummer during a concert" />
                 </li>
                 <li class="gallery__item">
-                    <img class="gallery__image" 
+                    <img class="gallery__image"
                         srcset="./images/band07.jpg,
-                        ./images/band07@2.jpg 2x,
-                        ./images/band07@3.jpg 3x"
+                                ./images/band07@2.jpg 2x,
+                                ./images/band07@3.jpg 3x"
                         src="./images/band07@3.jpg"
                         alt="Image of band members at the construction site" />
                 </li>
                 <li class="gallery__item">
-                    <img class="gallery__image" 
+                    <img class="gallery__image"
                         srcset="./images/band08.jpg,
-                        ./images/band08@2.jpg 2x,
-                        ./images/band08@3.jpg 3x"
+                                ./images/band08@2.jpg 2x,
+                                ./images/band08@3.jpg 3x"
                         src="./images/band08@3.jpg"
                         alt="Image of band members posing against the wall with graffiti" />
                 </li>
                 <li class="gallery__item">
-                    <img class="gallery__image" 
+                    <img class="gallery__image"
                         srcset="./images/band09.jpg,
-                        ./images/band09@2.jpg 2x,
-                        ./images/band09@3.jpg 3x"
+                                ./images/band09@2.jpg 2x,
+                                ./images/band09@3.jpg 3x"
                         src="./images/band09@3.jpg"
                         alt="Image of band members standing in the shadows" />
                 </li>
                 <li class="gallery__item">
-                    <img class="gallery__image" 
-                        srcset="./images/band10.jpg,
-                        ./images/band10@2.jpg 2x,
-                        ./images/band10@3.jpg 3x"
+                    <img class="gallery__image"
+                        srcset="./images/band10.jpg
+                                ./images/band10@2.jpg 2x,
+                                ./images/band10@3.jpg 3x"
                         src="./images/band10@3.jpg"
                         alt="Image of band members standing at the construction site" />
                 </li>
                 <li class="gallery__item">
-                    <img class="gallery__image" 
-                        srcset="./images/band11.jpg,
-                        ./images/band11@2.jpg 2x,
-                        ./images/band11@3.jpg 3x"
+                    <img class="gallery__image"
+                        srcset="./images/band11.jpg
+                                ./images/band11@2.jpg 2x,
+                                ./images/band11@3.jpg 3x"
                         src="./images/band11@3.jpg"
                         alt="Image of band vocalist during a concert" />
                 </li>
                 <li class="gallery__item">
-                    <img class="gallery__image" 
-                        srcset="./images/band04_JakubBodys.jpg,
-                        ./images/band04_JakubBodys@2.jpg 2x,
-                        ./images/band04_JakubBodys@3.jpg 3x"
+                    <img class="gallery__image"
+                        srcset="./images/band04_JakubBodys.jpg
+                                ./images/band04_JakubBodys@2.jpg 2x,
+                                ./images/band04_JakubBodys@3.jpg 3x"
                         src="./images/band04_JakubBodys@3.jpg"
                         alt="Image of band keyboard player during a concert" />
                 </li>
                 <li class="gallery__item">
-                    <img class="gallery__image" 
-                        srcset="./images/band03_WiechnikMarcin.jpg,
-                        ./images/band03_WiechnikMarcin@2.jpg 2x,
-                        ./images/band03_WiechnikMarcin@3.jpg 3x"
+                    <img class="gallery__image"
+                        srcset="./images/band03_WiechnikMarcin.jpg
+                                ./images/band03_WiechnikMarcin@2.jpg 2x,
+                                ./images/band03_WiechnikMarcin@3.jpg 3x"
                         src="./images/band03_WiechnikMarcin@3.jpg"
                         alt="Image of band vocalist and keyboard player during a concert" />
                 </li>
             </ul>
         </section>
-
         <section id="contact" class="content-section">
             <h2 class="content-section__header">Contact</h2>
             <div class="contact">
@@ -240,7 +258,7 @@
                     Tel: 123 456 789<br />
                     E-mail: 6bmmusic@gmail.com
                 </address>
-                <form class="contact__form form">
+                <form class="contact__form form" ID="contact-form">
                     <div class="form__field">
                         <label class="form__label" for="email">E-mail</label>
                         <input class="form__input" type="email" name="email" id="email" required />
@@ -254,8 +272,11 @@
             </div>
         </section>
     </main>
-    
     <footer class="page-footer">
+        <!--
+                ZAGADNIENIE PONADPROGRAMOWE
+                Podobnie jak wyżej, nagłówek jest utworzony dla użytku czytników ekranowych.
+            -->
         <h2 class="screen-reader-only">Social media links</h2>
         <ul class="social-links">
             <li class="social-links__item">
@@ -281,4 +302,5 @@
         </ul>
     </footer>
 </body>
+
 </html>
