--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
                     Tel: 123 456 789<br />
                     E-mail: 6bmmusic@gmail.com
                 </address>
-                <form class="contact__form form" ID="contact-form">
+                <form class="contact__form form" id="contact-form">
                     <div class="form__field">
                         <label class="form__label" for="email">E-mail</label>
                         <input class="form__input" type="email" name="email" id="email" required />
