--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
 
 <head>
     <title>6BM Band Official Website</title>
-    <script src="./script.js" defer></script>
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700&display=swap&subset=latin-ext"
+          rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="./style.css" />
+    <script src="./script.js" defer></script>
 </head>
 
 <body>
@@ -14,10 +16,12 @@
         <h1 class="page-brand">
             <img src="./images/logo.png" alt="6BM logo" />
         </h1>
-        <button class="button button-navigation">
-            <img class="hamburger-menu" src="./images/hamburger-menu.png" alt="Menu" />
+        <button id="hamburger" class="button menu-button">
+            <div class="hamburger-item" id="hamburger-1"></div>
+            <div class="hamburger-item" id="hamburger-2"></div>
+            <div class="hamburger-item" id="hamburger-3"></div>
         </button>
-        <nav class="page-navigation__items invisible">
+        <nav class="page-navigation">
             <ul class="page-navigation__items">
                 <li class="page-navigation__item">
                     <a class="page-navigation__link" href="#home">Home</a>
@@ -40,25 +44,9 @@
             </ul>
         </nav>
     </header>
+
     <main class="page-content">
         <section id="home" class="content-section home-section">
-            <!--
-                    ZAGADNIENIE PONADPROGRAMOWE
-                    Nagłówek 'Home' nie jest pokazany na projekcie graficznym, ale dobrą praktyką
-                    jest umieszczanie nagłówków przy każdej głównej sekcji strony.
-                    Pozwoli to na użytkownikom czytników ekranowych (np. osobom niewidomym lub niedowidzącym)
-                    na zorientowanie się w strukturze naszej strony.
-                    A żeby zachować wygląd strony adekwatny do projektu graficznego,
-                    można utworzyć pomocniczą klasę CSS (np. 'screen-reader-only'),
-                    która będzie ukrywała dany element dla standardowego użytkownika.
-                    Należy jednak pamiętać, że ukrywanie elementów strony może obniżyć ranking
-                    pozycjonowania twojej strony (SEO) i powinniśmy starać się umieszczać elementy nagłówkowe
-                    w projekcie graficznym.
-                    Dlatego też trzeba świadomie stosować to rozwiązanie i jeśli bardziej zależy nam na
-                    pozycjonowaniu niż dostępności, wtedy możemy użyć więcej niż jeden znacznik <h1> i
-                    używać go jako głównego nagłówka danych sekcji (w przypadku naszego projektu <h2>
-                    zamienilibyśmy na <h1>, a <h3> na <h2>).
-                -->
             <h2 class="content-section__header screen-reader-only">Home</h2>
             <ul class="band-members">
                 <li class="band-members__item">
@@ -107,6 +95,7 @@
                 </div>
             </div>
         </section>
+
         <section id="concerts" class="content-section">
             <h2 class="content-section__header">Concerts</h2>
             <div class="concerts">
@@ -118,9 +107,7 @@
                             <p class="concerts__date">20.12.2018</p>
                             <p class="concerts__location">Lublin, klub XXX</p>
                         </div>
-                        <div id="container_1">
-                            <button id="button_1" class="button button-concert">Buy a ticket</button>  
-                        </div>
+                        <button class="button button--buy-ticket">Buy a ticket</button>
                     </header>
                 </article>
                 <article class="concerts__item">
@@ -131,9 +118,7 @@
                             <p class="concerts__date">20.12.2018</p>
                             <p class="concerts__location">Lublin, klub XXX</p>
                         </div>
-                        <div id="container_2">
-                            <button id="button_2" class="button button-concert">Buy a ticket</button>  
-                        </div>
+                        <button class="button button--buy-ticket">Buy a ticket</button>
                     </header>
                 </article>
                 <article class="concerts__item">
@@ -144,9 +129,7 @@
                             <p class="concerts__date">20.12.2018</p>
                             <p class="concerts__location">Lublin, klub XXX</p>
                         </div>
-                        <div id="container_3">
-                            <button id="button_3" class="button button-concert">Buy a ticket</button>  
-                        </div>
+                        <button class="button button--buy-ticket">Buy a ticket</button>
                     </header>
                 </article>
                 <article class="concerts__item">
@@ -157,19 +140,19 @@
                             <p class="concerts__date">20.12.2018</p>
                             <p class="concerts__location">Lublin, klub XXX</p>
                         </div>
-                        <div id="container_4">
-                            <button id="button_4" class="button button-concert">Buy a ticket</button>  
-                        </div>
+                        <button class="button button--buy-ticket">Buy a ticket</button>
                     </header>
                 </article>
             </div>
         </section>
+
         <section id="video" class="content-section">
             <h2 class="content-section__header">Video</h2>
             <iframe class="embedded-video" width="853" height="480"
                 src="https://www.youtube.com/embed/AstRXh-vKNI?rel=0" frameborder="0" allow="autoplay; encrypted-media"
                 allowfullscreen></iframe>
         </section>
+
         <section id="photos" class="content-section">
             <h2 class="content-section__header">Photos</h2>
             <ul class="gallery">
@@ -215,7 +198,7 @@
                 </li>
                 <li class="gallery__item">
                     <img class="gallery__image"
-                        srcset="./images/band10.jpg
+                        srcset="./images/band10.jpg,
                                 ./images/band10@2.jpg 2x,
                                 ./images/band10@3.jpg 3x"
                         src="./images/band10@3.jpg"
@@ -223,7 +206,7 @@
                 </li>
                 <li class="gallery__item">
                     <img class="gallery__image"
-                        srcset="./images/band11.jpg
+                        srcset="./images/band11.jpg,
                                 ./images/band11@2.jpg 2x,
                                 ./images/band11@3.jpg 3x"
                         src="./images/band11@3.jpg"
@@ -231,7 +214,7 @@
                 </li>
                 <li class="gallery__item">
                     <img class="gallery__image"
-                        srcset="./images/band04_JakubBodys.jpg
+                        srcset="./images/band04_JakubBodys.jpg,
                                 ./images/band04_JakubBodys@2.jpg 2x,
                                 ./images/band04_JakubBodys@3.jpg 3x"
                         src="./images/band04_JakubBodys@3.jpg"
@@ -239,7 +222,7 @@
                 </li>
                 <li class="gallery__item">
                     <img class="gallery__image"
-                        srcset="./images/band03_WiechnikMarcin.jpg
+                        srcset="./images/band03_WiechnikMarcin.jpg,
                                 ./images/band03_WiechnikMarcin@2.jpg 2x,
                                 ./images/band03_WiechnikMarcin@3.jpg 3x"
                         src="./images/band03_WiechnikMarcin@3.jpg"
@@ -247,6 +230,7 @@
                 </li>
             </ul>
         </section>
+
         <section id="contact" class="content-section">
             <h2 class="content-section__header">Contact</h2>
             <div class="contact">
@@ -258,7 +242,7 @@
                     Tel: 123 456 789<br />
                     E-mail: 6bmmusic@gmail.com
                 </address>
-                <form class="contact__form form" id="contact-form">
+                <form class="contact__form form">
                     <div class="form__field">
                         <label class="form__label" for="email">E-mail</label>
                         <input class="form__input" type="email" name="email" id="email" required />
@@ -272,11 +256,8 @@
             </div>
         </section>
     </main>
+
     <footer class="page-footer">
-        <!--
-                ZAGADNIENIE PONADPROGRAMOWE
-                Podobnie jak wyżej, nagłówek jest utworzony dla użytku czytników ekranowych.
-            -->
         <h2 class="screen-reader-only">Social media links</h2>
         <ul class="social-links">
             <li class="social-links__item">
