--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <header class="page-header">
         <h1 class="page-brand">
-            <img src="./images/logo.png" alt="6BM logo" />
+            <a class="page-brand__logo" href="#home"><img src="./images/logo.png" alt="6BM logo" /></a>
         </h1>
         <button id="hamburger" class="button menu-button">
             <div class="hamburger-item" id="hamburger-1"></div>
@@ -52,26 +52,34 @@
                 <li class="band-members__item">
                     <img class="band-members__image" src="./images/band-member01.png"
                         alt="Image of stylized keyboard player's face" />
-                    <p class="band-members__name">Kamil Zgondek</p>
-                    <p class="band-members__desc">Keyboard</p>
+                    <div class="band-members__info visible-animation">
+                        <p class="band-members__name">Kamil Zgondek</p>
+                        <p class="band-members__desc">Keyboard</p>
+                    </div>
                 </li>
                 <li class="band-members__item">
                     <img class="band-members__image" src="./images/band-member02.png"
                         alt="Image of stylized vocalist's face" />
-                    <p class="band-members__name">Łukasz Furman</p>
-                    <p class="band-members__desc">Vocals</p>
+                    <div class="band-members__info visible-animation">
+                        <p class="band-members__name">Łukasz Furman</p>
+                        <p class="band-members__desc">Vocals</p>
+                    </div>
                 </li>
                 <li class="band-members__item">
                     <img class="band-members__image" src="./images/band-member03.png"
                         alt="Image of stylized drummer's face" />
-                    <p class="band-members__name">Kamil Majewski</p>
-                    <p class="band-members__desc">Drums</p>
+                    <div class="band-members__info visible-animation">
+                        <p class="band-members__name">Kamil Majewski</p>
+                        <p class="band-members__desc">Drums</p>
+                    </div>
                 </li>
                 <li class="band-members__item">
                     <img class="band-members__image" src="./images/band-member04.png"
                         alt="Image of stylized bassist's face" />
-                    <p class="band-members__name">Daniel Cajzer</p>
-                    <p class="band-members__desc">Bass guitar</p>
+                    <div class="band-members__info visible-animation">
+                        <p class="band-members__name">Daniel Cajzer</p>
+                        <p class="band-members__desc">Bass guitar</p>
+                    </div>
                 </li>
             </ul>
 
